--- a/requirements.txt
+++ b/requirements.txt
@@ -11,11 +11,4 @@ docutils==0.15.2
 gunicorn==20.0.4
 jmespath==0.10.0
 Pillow==7.2.0
-psycopg2-binary==2.8.5  # Replace psycopg2 with psycopg2-binary
-python-dateutil==2.8.1
-pytz==2020.1
-s3transfer==0.3.3
-six==1.15.0
-sqlparse==0.3.1
-urllib3==1.25.10
-whitenoise==5.1.0
+psycopg2-binary==2.8.5
